# pyinstallerpaths

./: .gitignore  LICENSE.txt  README.md  main.py  mainDIR.spec  mainONEFILEMAC.spec  mainONEFILEWIN.spec  pyproject.toml  requirementsMAC.txt  tutorial.md
lv1/: main.py  main1.py  mainONEFILE1.spec
